logs/aspic.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aspic'...
Compiling './lib/python3.5/site-packages/aspic/connection.py'...
***   File "./lib/python3.5/site-packages/aspic/connection.py", line 60
    return f'<Async SpecConnection to {self.name} running at {host}:{port}>'
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aspic/header.py'...
***   File "./lib/python3.5/site-packages/aspic/header.py", line 51
    return (f'<Spec header: size={self.size:d}, id={self.id:d}, cmd={self.cmd:d}, type={self.typ:d}, '
                                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aspic/message.py'...
***   File "./lib/python3.5/site-packages/aspic/message.py", line 48
    return self._register(f'motor/{name}/position')
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aspic/qmotor.py'...
***   File "./lib/python3.5/site-packages/aspic/qmotor.py", line 41
    return f'Qt Spec Motor {self._name} with {self._connection}'
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aspic/qonnection.py'...
***   File "./lib/python3.5/site-packages/aspic/qonnection.py", line 67
    self.sigError.emit(f'Lost connection to {self._name} at {self._host}:{self._port}')
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aspic-2017.10.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
